#2040: replace immutable HashSet by Set.of() to reduce code * adjusted imports * closes #2040